Fix gap: 15px not supported on <14.1 safari

--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -21,7 +21,11 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+}
+
+.sidebar > * {
+  margin-bottom: 15px; 
+  /*  fix for old safari not supporting flex-gap */
 }
 
 .sidebar h4 {
